[project]
name = "whoreps-mcp"
version = "0.1.0"
description = "Address -> your elected officials, as an MCP server. A free, open replacement for Google's shut-down Civic Information Representatives API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cooper Stillick" }]
keywords = ["mcp", "civic", "elections", "representatives", "congress", "openstates", "census"]

dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
whoreps-mcp = "whoreps_mcp.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whoreps_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Import from src/ directly — robust regardless of editable-install wiring.
pythonpath = ["src"]
